# seamcarver-cpp

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: glfw_utils.hpp  image_processing.hpp
src/: glfw_utils.cpp  image_processing.cpp  main.cpp
